# monty

./: .gitignore  README.md  add.c  close_stream.c  div.c  free_all_args.c  free_arguments.c  free_head.c  free_stack.c  free_tokens.c  get_instruction.c  get_stream.c  initialize_arguments.c  is_number.c  main.c  malloc_failed.c  mod.c  monty.h  mul.c  nop.c  pall.c  pchar.c  pint.c  pop.c  pstr.c  push.c  queue.c  rotl.c  rotr.c  run_instruction.c  stack.c  sub.c  swap.c  tokenize_line.c  validate_arguments.c
assets/: CMakeLists.txt  monty
deallocators/: free_all_args.c  free_arguments.c  free_head.c  free_stack.c  free_tokens.c
executor/: get_instruction.c  run_instruction.c
opcodes/: add.c  div.c  mod.c  mul.c  nop.c  pall.c  pchar.c  pint.c  pop.c  pstr.c  push.c  queue.c  rotl.c  rotr.c  stack.c  sub.c  swap.c
parser/: close_stream.c  get_stream.c  tokenize_line.c
utils/: initialize_arguments.c  is_number.c  malloc_failed.c  validate_arguments.c
